@@ -26,17 +26,28 @@
 
 import defaults, config
 
+import urlparse
+import re
+
 def page_index():
     default_start_url = config.user.get("start_url") or config.start_url
     start_url = html.var("start_url", default_start_url).strip()
 
     # Prevent redirecting to absolute URL which could be used to redirect
     # users to compromised pages.
-    if '://' in start_url:
+    # Also prevent using of "javascript:" URLs which could used to inject code
+    parsed = urlparse.urlparse(start_url)
+
+    # Don't allow the user to set a URL scheme
+    if parsed.scheme != "":
         start_url = default_start_url
 
-    # Also prevent using of "javascript:" URLs which could used to inject code
-    if start_url.lower().startswith('javascript:'):
+    # Don't allow the user to set a network location
+    if parsed.netloc != "":
+        start_url = default_start_url
+
+    # Don't allow bad characters in path
+    if not re.match("[/a-z0-9_\.-]*$", parsed.path):
         start_url = default_start_url
 
     if "%s" in config.page_heading:
